<resources>
    <string name="app_name">ProbateApp</string>
    <string name="title_activity_login">Usuario (email)</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Inicie sesión o regístrese</string>
    <string name="action_sign_in_short">Inicie Sesión</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="mensaje_de_bienvenida">¡¡¡Bienvenido!!!</string>
    <string name="boton_inicial_de_ingreso">¡Probarme!</string>
    <string name="boton_inicial_de_salida">Ups! Me voy!</string>
    <string name="usuario">Usuario (mail)</string>
    <string name="registro">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="email">Email</string>
    <string name="instituto">Instituto</string>
    <string name="contraseña">Contraseña</string>
    <string name="telefono">Telefono</string>
    <string name="repetirContraseña">Repetir Contraseña</string>
    <string name="botonRegistro">ENVIAR</string>
    <string name="hola_nombre">Hola Luisa!</string>
    <string name="texto">Materias de</string>
    <string name="todo">TODO</string>
    <string name="estadiscticas">Estadísticas</string>
    <string name="perfil">Mi Perfil</string>
    <string name="salir">Salir</string>

    <string-array name="institutos">
        <item>Instituto</item>
        <item>Faculltad Humanidades</item>
        <item>Facultad de Ciencias</item>
        <item>IMM</item>

    </string-array>

    <string-array name="cursos">
        <item>Curso</item>
        <item>Historia</item>
        <item>Historia Antigua</item>
        <item>Filosofía</item>
        <item>Categorias A, G1, G2 y G3</item>


    </string-array>
    <string name="trivia">TRIVIA</string>
    <string name="examen">EXÁMEN</string>
    <string name="_1er_a_o">1er. año</string>
    <string name="cultura_griega">Cultura Griega</string>
    <string name="Ingresar">Ingresar</string>
    <string name="Olvidodecontraseña">¿Olvidaste tu contraseña?</string>
    <string name="Registrousuario">¿Nuevo por aquí? Click para registrarse</string>
    <string name="nombreUsuario">Usuario</string>
    <string name="preguntaEleccion">¿Cómo te querés probar?</string>
</resources>