<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Bienvenida">

    <Button
        android:id="@+id/button3"
        android:layout_width="148dp"
        android:layout_height="72dp"
        android:layout_marginStart="28dp"
        android:text="@string/boton_inicial_de_ingreso"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="329dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="353dp"
        android:layout_height="95dp"
        android:layout_marginTop="204dp"
        android:ems="10"
        android:hint="@string/mensaje_de_bienvenida"
        android:inputType="textPersonName"
        android:text="@string/mensaje_de_bienvenida"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="148dp"
        android:layout_height="72dp"
        android:layout_marginStart="232dp"
        android:text="@string/boton_inicial_de_salida"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="329dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>