<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editTextTextBienvenida"
        android:layout_width="369dp"
        android:layout_height="83dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="40dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/mensaje_de_bienvenida"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonIngreso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:visibility="visible" />

    <Button
        android:id="@+id/buttonIngreso"
        android:layout_width="0dp"
        android:layout_height="69dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="98dp"
        android:onClick="sendMessage"
        android:text="@string/boton_inicial_de_ingreso"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextBienvenida"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="301dp"
        android:layout_marginTop="51dp"
        android:layout_marginBottom="52dp"
        android:contentDescription="@string/todo"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextBienvenida"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_probaate" />

</androidx.constraintlayout.widget.ConstraintLayout>